# py-todo-template

./: .gitignore  README.md  build.sh  build_alembic.sh  pyproject.toml
app/: Dockerfile  Dockerfile.alembic  requirements.txt
app/alembic/: env.py
app/alembic/versions/: 01189eb5a866_added_item_table.py  01189eb5a866_added_item_table_new_column.py  a8162b9f2c9e_first_revision.py
app/src/: database.py  environment.py  exception_handlers.py  lifecycle_hooks.py  main.py  secrets.py
app/tests/: test_hello_world.py
k8s-alloy/: install.sh
k8s-app/: alembic.yaml  app.yaml
k8s-cluster/: install_ingress.sh  kind-config.yaml  local_registry.sh
k8s-jaeger/: expose_ui.sh  jaeger.yaml
k8s-loki/: values.yaml
k8s-postgres/: create_secret.sh  postgres.yaml  pv.yaml  pvc.yaml
tests/: conftest.py  test_hello_world.py
