[tool.poetry]
name = "py-todo-template"
version = "0.1.0"
description = ""
authors = ["Paolo Rechia <paolorechia@gmail.com>"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
pyleiter = "^0.2.1"
pytest = "^8.2.2"
ipython = "^8.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyleiter.commands]
# Coding Setup
format = { command = "ruff format app", help = "Applies ruff format to project"}
lint = { command = "ruff check app", help = "Runs project formatter and linter" }

# Local Kind Setup
kind_install = {command = "[ $(uname -m) = x86_64 ] && curl -Lo ./kind https://kind.sigs.k8s.io/dl/v0.23.0/kind-linux-amd64 && chmod +x ./kind && sudo mv ./kind /usr/local/bin/kind"}
kind_create = { command = "kind create cluster --config k8s-cluster/kind-config.yaml", help="Create kind cluster"}
kind_kill = { command = "kind delete clusters kind", help = "Tears down local cluster"}
kind_install_ingress = { command = "./k8s-cluster/install_ingress.sh", help="Install Ingress on kind cluster"}
kind_setup_local_registry = { command = "./k8s-cluster/local_registry.sh", help = "Setup Local Registry"}

# Local Kubernetes Application
postgres_secret = { command = "./k8s-postgres/create_secret.sh" }
postgres_pv = { command = "kubectl apply -f k8s-postgres/pv.yaml" }
postgres_pvc = { command = "kubectl apply -f k8s-postgres/pvc.yaml" }
postgres_create = { command = "kubectl apply -f k8s-postgres/postgres.yaml", help = "Install postgres" }


# App
app_test = { command = "pytest -vvv"}
app_build = { command = "./build.sh"}
app_deploy = { command = "kubectl apply -f ./k8s-app/app.yaml"}